# mihomo-rust

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  bench.sh  config.example.yaml
.github/workflows/: bench.yml  coverage.yml  pages.yml  release.yml  test.yml
crates/meow-api/: Cargo.toml
crates/meow-api/src/: lib.rs  log_stream.rs  routes.rs  ui.rs
crates/meow-api/static/: index.html
crates/meow-api/tests/: api_logs_ws_test.rs  api_test.rs
crates/meow-app/: Cargo.toml
crates/meow-app/src/: lib.rs  main.rs
crates/meow-app/tests/: config_smoke.rs  systemd_config_test.rs
crates/meow-bench/: Cargo.toml
crates/meow-bench/src/: bench_binary_size.rs  bench_connrate.rs  bench_dns.rs  bench_idle_conns.rs  bench_latency.rs  bench_memory.rs  bench_throughput.rs  echo_server.rs  main.rs  results.rs  socks5_client.rs
crates/meow-common/: Cargo.toml
crates/meow-common/src/: adapter.rs  adapter_type.rs  auth.rs  conn.rs  error.rs  lib.rs  metadata.rs  network.rs  process_lookup.rs  rule.rs  tunnel_mode.rs
crates/meow-common/src/sniffer/: http.rs  mod.rs  tls.rs
crates/meow-common/tests/: common_test.rs
crates/meow-config/: Cargo.toml
crates/meow-config/src/: auth.rs  dns_parser.rs  ech_dns.rs  geodata.rs  internal_http.rs  lib.rs  proxy_parser.rs  proxy_provider.rs  raw.rs  rule_parser.rs  rule_provider.rs  sub_rules_parser.rs  subscription.rs
crates/meow-config/tests/: config_persistence_test.rs  config_test.rs  ech_dns_test.rs  internal_http_via_ss.rs  sniffer_config_test.rs  vless_config_test.rs
crates/meow-dns/: Cargo.toml
crates/meow-dns/src/: cache.rs  client.rs  fakeip.rs  lib.rs  resolver.rs  server.rs  upstream.rs
crates/meow-dns/tests/: cache_soak.rs  dns_cache_test.rs  doh_dot_integration.rs  proxy_routed_dns.rs
crates/meow-listener/: Cargo.toml
crates/meow-listener/src/: http_proxy.rs  lib.rs  mixed.rs  sniffer.rs  socks5.rs
crates/meow-listener/tests/: http_connect.rs  mixed_dispatch.rs  socks5_handshake.rs
crates/meow-proxy/: Cargo.toml
crates/meow-proxy/src/: anytls_adapter.rs  direct.rs  ech_tls_tunnel.rs  health.rs  http_adapter.rs  hysteria2_adapter.rs  lib.rs  reject.rs  shadowsocks_adapter.rs  simple_obfs.rs  socks5_adapter.rs  stream_conn.rs  transport_chain.rs  trojan.rs  v2ray_plugin.rs  vless_adapter.rs
crates/meow-proxy/src/group/: fallback.rs  load_balance.rs  mod.rs  relay.rs  selector.rs  selector_store.rs  urltest.rs
crates/meow-proxy/src/vless/: conn.rs  header.rs  mod.rs  vision.rs
crates/meow-proxy/tests/: anytls_integration.rs  shadowsocks_integration.rs  trojan_integration.rs  v2ray_plugin_integration.rs  vless_integration.rs
crates/meow-rules/: Cargo.toml
crates/meow-rules/benches/: iprange_parser_bench.rs  rules_bench.rs
crates/meow-rules/src/: country_index.rs  domain.rs  domain_keyword.rs  domain_regex.rs  domain_suffix.rs  domain_wildcard.rs  dscp.rs  final_rule.rs  geoip.rs  geosite.rs  geosite_rule.rs  in_name.rs  in_port.rs  in_type.rs  in_user.rs  ip_asn.rs  ip_suffix.rs  ipcidr.rs  lib.rs  logic.rs  mrs_parser.rs  network.rs  parser.rs  port.rs  process.rs  process_path.rs  rule_set.rs  rule_set_rule.rs  src_geoip.rs  sub_rule.rs  uid.rs
crates/meow-rules/tests/: rules_test.rs
crates/meow-transport/: Cargo.toml
crates/meow-transport/src/: error.rs  grpc.rs  h2.rs  httpupgrade.rs  lib.rs  tls.rs  ws.rs
crates/meow-trie/: Cargo.toml
crates/meow-tunnel/: Cargo.toml
crates/mihomo-app/: Cargo.toml
crates/mihomo-app/src/: main.rs
crates/mihomo-config/: Cargo.toml
crates/mihomo-config/src/: internal_http.rs  lib.rs  proxy_parser.rs
crates/mihomo-config/tests/: internal_http_via_ss.rs
crates/mihomo-proxy/: Cargo.toml
crates/mihomo-proxy/src/: ech_tls_tunnel.rs  health.rs  http_adapter.rs  lib.rs  shadowsocks_adapter.rs
crates/mihomo-proxy/src/group/: load_balance.rs  selector.rs  urltest.rs
crates/mihomo-proxy/tests/: trojan_integration.rs  vless_integration.rs
crates/mihomo-transport/: Cargo.toml
crates/mihomo-trie/: Cargo.toml
crates/mihomo-trie/src/: trie.rs
docs/: ci-status.md  gap-analysis.md  migration-from-go-mihomo.md  roadmap.md  soak-test-plan.md  vision.md
docs/adr/: 0001-meow-transport-crate.md  0002-upstream-divergence-policy.md  0003-provider-refresh-substrate.md  0004-metrics-cardinality.md  0005-runtime-event-broadcaster.md  0006-m2-benchmark-methodology.md  0007-m2-footprint-budget.md  0008-m2-allocator-audit.md  0009-cleanup-scope.md  0010-m1-hygiene-and-gates-addendum.md  0010-m1-hygiene-and-gates.md  0011-m2-footprint-targets.md  0012-dns-via-proxy.md
docs/benchmarks/: binary-size.md  footprint-alloc-baseline.md  footprint-rss-baseline.md  footprint-types-baseline.md  hardware.md  index.md  m1-addendum-lint-probe.md  m2-exit-local.md  m2-exit-status-preliminary.md  rule-engine-findings.md  smallvec-audit-findings.md
docs/plugins/: ech-tls-tunnel.md
docs/specs/: allocator-audit.md  api-config-reload-test-plan.md  api-config-reload.md  api-delay-endpoints-test-plan.md  api-delay-endpoints.md  api-logs-websocket-test-plan.md  api-logs-websocket.md  benchmark-harness.md  cargo-feature-flags.md  ci-quality-gates.md  dns-doh-dot-test-plan.md  dns-doh-dot.md  dns-hosts-test-plan.md  dns-nameserver-policy-test-plan.md  dns-nameserver-policy.md  ech-utls-design.md  ech-utls-status.md  ech-utls-test-plan.md  geodata-subsection.md  group-load-balance-test-plan.md  group-load-balance.md  group-relay-test-plan.md  group-relay.md  inbound-auth-acl-test-plan.md  inbound-auth-acl.md  listeners-unified-test-plan.md  listeners-unified.md  metrics-prometheus-test-plan.md  metrics-prometheus.md  proxy-http-socks-outbound.md  proxy-providers-test-plan.md  proxy-providers.md  proxy-vless-test-plan.md  proxy-vless.md  proxy-vmess-test-plan.md  proxy-vmess.md  rule-engine-micro-opt.md  rule-geosite-test-plan.md  rule-geosite.md  rule-provider-upgrade-test-plan.md  (+9 more)
tests/: test_memleak_proxy.sh  test_ss.sh  test_stress_gstatic.sh  test_stress_ss_ws_tls.sh  test_tproxy_qemu.sh  test_trojan.sh
tests/tproxy-qemu/: guest-init.sh  meow-tproxy.yaml
(+49 files in other folders)
