[package]
name = "mihomo-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["ss", "trojan", "vless", "vless-vision"]
ss = ["mihomo-proxy/ss"]
trojan = ["mihomo-proxy/trojan"]
vless = ["mihomo-proxy/vless"]
vless-vision = ["vless", "mihomo-proxy/vless-vision"]
boring-tls = ["mihomo-transport/boring-tls"]
ech-tls-tunnel = ["ss", "mihomo-proxy/ech-tls-tunnel"]

[dependencies]
mihomo-common = { workspace = true }
mihomo-trie = { workspace = true }
mihomo-dns = { workspace = true, features = ["encrypted"] }
mihomo-rules = { workspace = true }
mihomo-proxy = { workspace = true, default-features = false }
mihomo-transport = { workspace = true, features = ["grpc", "h2", "httpupgrade"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
maxminddb = { workspace = true }
ipnet = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }
parking_lot = { workspace = true }
hickory-proto = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
tracing-subscriber = { workspace = true }

[[test]]
name = "vless_config_test"
path = "tests/vless_config_test.rs"

[lints]
workspace = true
