[package]
name = "mihomo-proxy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["ss", "trojan", "vless", "vless-vision"]
ss = ["dep:shadowsocks"]
trojan = []
vless = []
vless-vision = ["vless"]

[dependencies]
mihomo-common = { workspace = true }
mihomo-dns = { workspace = true }
mihomo-transport = { workspace = true }
tokio = { workspace = true }
shadowsocks = { workspace = true, optional = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
serde_json = { workspace = true }
socket2 = { workspace = true }
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
rcgen = "0.13"
tokio-rustls = { workspace = true }
rustls = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
