[package]
name = "mihomo-trie"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
smallvec = { workspace = true }

[[bench]]
name = "trie_bench"
harness = false

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
